# prometheus-grafana-example

./: README.md  docker-compose.yml  pyproject.toml
src/prometheus_example/: app.py
src/prometheus_example/grafana_dashboards/: python_app.json
