[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prometheus-example"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "ricardoclg", email = "ricardoclg_@hotmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["prometheus-client" ,"flask"]

[project.urls]
Documentation = "https://github.com/ricardoclg/prometheus-example#readme"
Issues = "https://github.com/ricardoclg/prometheus-example/issues"
Source = "https://github.com/ricardoclg/prometheus-example"

[tool.hatch.version]
path = "src/prometheus_example/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/prometheus_example tests}"

[tool.coverage.run]
source_pkgs = ["prometheus_example", "tests"]
branch = true
parallel = true
omit = [
  "src/prometheus_example/__about__.py",
]

[tool.coverage.paths]
prometheus_example = ["src/prometheus_example", "*/prometheus-example/src/prometheus_example"]
tests = ["tests", "*/prometheus-example/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
